--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,32 @@
 name: Resume Match Maker CI
 
 on:
-    push:
-        branches:
-            - main
-
+  push:
+    branches:
+      - main
 
 jobs:
-    build-test:
-        runs-on: ubuntu-latest
+  build-test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v3
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-            - name: Set up python
-              uses: actions/setup-python@v4
-              with:
-                python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-            - name: Install dependencies
-              run: |
-                echo "✅ No tests yet, but CI is working!"
-            
-            # - name: 🐳 Docker Build
-            #   run: docker build -t resume-matcher-backend .
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 app --ignore=E501  # Skip line length if needed
 
-
-
-
+      - name: 🐳 Docker Build
+        run: docker build -t resume-matcher-backend .
