--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,13 +19,13 @@ jobs:
           python-version: "3.11"
 
       - name: Docker Login
-        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/resume-matcher:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/resume-matcher:latest .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/resume-matcher:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/resume-matcher:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -34,7 +34,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/resume-matcher:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/resume-matcher:latest
             docker stop resume-matcher || true
             docker rm resume-matcher || true
-            docker run -d -p 8000:8000 --name resume-matcher -e OPENAI_API_KEY=$OPENAI_API_KEY ${{ secrets.DOCKER_HUB_USERNAME }}/resume-matcher:latest
+            docker run -d -p 8000:8000 --name resume-matcher -e OPENAI_API_KEY=$OPENAI_API_KEY ${{ secrets.DOCKERHUB_USERNAME }}/resume-matcher:latest
